HIRE 테이블 에러 해결 (속성 파일에 spring.jpa.hibernate.ddl-auto=update추가)